Fix alignment for right content

--- a/components/src/core/info-list-item/info-list-item.component.scss
+++ b/components/src/core/info-list-item/info-list-item.component.scss
@@ -109,8 +109,9 @@ $denseHeight: 52px;
         order: 5;
         margin-left: 16px;
         white-space: nowrap;
-        .pxb-info-list-item-right-content-wrapper * {
+        .pxb-info-list-item-right-content-wrapper > * {
             display: flex;
+            align-items: center;
         }
     }
 }
